force-app/main/default/objects/Product_Geo_Mapping__mdt/Product_Geo_Mapping__mdt.object-meta.xml
<CustomObject>
    <description
  >Metadata to map Products to the minimum permissible fly zones in different countries.</description>
    <label>Product Geo Mapping</label>
    <pluralLabel>Product Geo Mappings</pluralLabel>
</CustomObject>