force-app/main/default/objects/Product_Geo_Mapping__mdt/fields/Permissible_Fly_Zone__c.field-meta.xml
<CustomField>
    <fullName>Permissible_Fly_Zone__c</fullName>
    <description>allowed area&apos;s for specific air craft</description>
    <label>Permissible Fly Zone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Recommended</fullName>
                <default>true</default>
                <label>Recommended</label>
            </value>
            <value>
                <fullName>Regulated</fullName>
            </value>
            <value>
                <fullName>Authorized</fullName>
            </value>
            <value>
                <fullName>Restricted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>